# kadishutu

./: .gitignore  README.md  pyproject.toml  run.bat  setup.bat
docs/: GameSave.md  SysSave.md  Troubleshooting.md  cheatroom_blog_post_translation.md  random_offsets.md
docs/experimentation/: difficulty.md  endgame.md  quests.md  satan_fight.md  vengeance-alignment.md
examples/: compendium_erase.py  heal_player.py  late_bonuses.py  script_example.py
examples/plugin_example_gui/: manifest.json  plugin_example_gui.py
examples/plugin_example_main/: manifest.json  plugin_example_main.py
src/: post-build.py  pre-build.py  pyinstaller_runtime.py
src/kadishutu/: __init__.py  __main__.py  alignment.py  cli.py  demons.py  dlc.py  editor_cli.py  encodings.py  encryption.py  essences.py  file_handling.py  game.py  gui.py  gui_common.py  gui_game.py  gui_icons.py  gui_prompt_install.py  gui_sys.py  gui_system.py  innate_skills.py  items.py  main.py  miracle_unlocks.py  miracles.py  offsets.py  paths.py  player.py  skills.py  values.py
src/kadishutu/core/game_save/: __init__.py  affinities.py  alignment.py  compendium.py  demonlike.py  demons.py  dlc.py  essences.py  game.py  items.py  miracle_unlocks.py  miracles.py  player.py  position.py  potentials.py  quests.py  skills.py  stats.py  team.py
src/kadishutu/core/shared/: editors.py  file_handling.py  unreal.py  unreal_editors.py
src/kadishutu/data/: affinity.py  alignment.py  csvutils.py  demon_race.py  demons.py  element_icons.py  essences.py  innate_skills.py  items.py  laylines.py  miracle_unlocks.py  miracles.py  old_demon_data.py  quests.py  save_locs.py  skills.py
src/kadishutu/data/tables/: README.md  SMT5V NKM Base Table_Navi Devil Data - Item Names.csv  SMT5V NKM Base Table_Navi Devil Data - Players.csv  SMT5V Skill Data Tables - ActionSkills.csv  SMT5V Skill Data Tables - AutoSkills.csv  alignment_data.json  item_extra_data.json  laylines.json  miracle_unlocks.json  miracles.json  save_locs.json
src/kadishutu/data/tools/: csv.py  dataclasses_json.py  mapping.py  path.py  unused.py
src/kadishutu/gui/: __init__.py  iconloader.py  mainwindow.py  prompt_install.py  shared.py
src/kadishutu/gui/game_save/: __init__.py  affinities.py  alignment.py  cross_cycle.py  demonlike.py  demons.py  dlc.py  essences.py  game_save.py  items.py  miracles.py  names.py  player.py  plugin.py  potentials.py  settings.py  shared.py  skills.py  stats.py  teleport.py
src/kadishutu/gui/sys_save/: __init__.py  sys_save.py
src/kadishutu/plugin/: loader.py  manifest.schema.json  meta.py
src/kadishutu/tools/: eprint.py  extio.py  fdatetime.py  groupobj.py  singleton.py  tbbreader.py  uexp_extract.py
src/kadishutu/tools/depinstall/: __init__.py  generic.py  generic_early.py  pipx.py  poetry.py  pyproj.py
