[tool.poetry]
name = "kadishutu"
version = "0.1.0"
description = "A save editor for Shin Megami Tensei V: Vengeance."
authors = ["fnrir"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dataclasses-json = "^0.6.7"
pandas = "^2.2.2"
pycryptodome = "^3.20.0"
tkinter-tooltip = "^3.1.0"
typing-extensions = "^4.12.2"

[tool.poetry.scripts]
kadishutu = "kadishutu:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
pylint = "^3.2.6"
flake8 = "^7.1.0"

[tool.poetry-pyinstaller-plugin.scripts]
kadishutu = "src/kadishutu/__main__.py"

[tool.poetry-pyinstaller-plugin.include]
"src/kadishutu/data/tables" = "kadishutu/data/tables"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
