[tool.poetry]
name = "kadishutu"
version = "0.1.1"
description = "A save editor for Shin Megami Tensei V: Vengeance."
authors = ["fnrir"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dataclasses-json = "^0.6.7"
pycryptodome = "^3.20.0"
typing-extensions = "^4.12.2"

[tool.poetry.scripts]
kadishutu = "kadishutu:main"

[tool.poetry.group.gui.dependencies]
pillow = "^10.4.0"
pyside6 = "^6.7.2"
xdg = "^6.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
pylint = "^3.2.6"
flake8 = "^7.1.0"

[tool.poetry-pyinstaller-plugin]
post-build = "src/post-build:post_build"

[tool.poetry-pyinstaller-plugin.scripts.kadishutu]
runtime_hooks = [
    "src/pyinstaller_runtime.py"
]
source = "src/kadishutu/__main__.py"

[tool.poetry-pyinstaller-plugin.package]
"README.md" = "."
"docs" = "."

[tool.poetry-pyinstaller-plugin.include]
"src/kadishutu/data/tables" = "kadishutu/data/tables"

[tool.pyinstaller-archiver]
archive_name = "{name}-{platform}-{commit}"

[tool.pyinstaller-archiver.formats]
linux = ["xz", "7z"]
windows = ["zip"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
