[tool.poetry]
name = "kadishutu"
version = "0.1.12"
description = "A save editor for Shin Megami Tensei V: Vengeance."
authors = ["fnrir"]
license = "MIT"
readme = "README.md"
build = "src/pre-build.py"
include = [
    "src/kadishutu/tools/depinstall/pyproject.toml"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
dataclasses-json = "^0.6.7"
pycryptodome = "^3.21.0"
semver = "^3.0.2"
toml = "^0.10.2"
typing-extensions = "^4.12.2"

[tool.poetry.dependencies.xdg]
version = "^6.0.0"
markers = "sys_platform == 'linux'"

[tool.poetry.scripts]
kadishutu = "kadishutu:main"

[tool.poetry.group.gui.dependencies]
pillow = "^10.4.0"
pyside6 = "^6.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pylint = "^3.3.0"
flake8 = "^7.1.0"
types-toml = "^0.10.8.20240310"

[tool.poetry.group.example-late_bonuses.dependencies]
inquirer = "^3.4.0"

[tool.poetry-pyinstaller-plugin]
post-build = "src/post-build:post_build"

[tool.poetry-pyinstaller-plugin.scripts.kadishutu]
runtime_hooks = [
    "src/pyinstaller_runtime.py"
]
source = "src/kadishutu/__main__.py"

[tool.poetry-pyinstaller-plugin.package]
"README.md" = "."
"docs" = "."
"examples" = "."

[tool.poetry-pyinstaller-plugin.include]
"src/kadishutu/data/tables" = "kadishutu/data/tables"

[tool.pyinstaller-archiver]
archive_name = "{name}-{platform}-{commit}"

[tool.pyinstaller-archiver.formats]
linux = ["xz", "7z"]
windows = ["zip"]

[build-system]
requires = ["poetry-core", "toml"]
build-backend = "poetry.core.masonry.api"
